2006-06-18 Magnus Hagdorn
 * src/python/glide_launch.py: need to add \n for gfortran

2006-06-18 Magnus Hagdorn
 * src/fortran/Makefile.am: rename files *.f90 -> *.F90
 * src/python/generate_ncvars.py: ditto
 * src/fortran/*.f90: rename to *.F90, add preprocessor machinery to load
   config.inc
 * bootstrap: add call to autoheader
 * configure.in: rename .f90 -> .F90, use autoheader to generate config.inc

2006-06-15 Ian Rutt
 * Added precip scaling option to glint_example_clim.f90

2006-05-29 Ian Rutt
 * spelling mistakes in glint_vars.def corrected. (Thanks to Oli Browne)

2006-05-21 Stewart Jamieson
 * glide_vars.def: annual massbalance can be averaged over time
 * glide_types.f90: add new variable for averaging annual 
   massbalance

2006-05-18 Ian Rutt
 * Minor bugfix to profiling (mistake in glide_stop.f90 - non-existent
 derived type element)

2006-05-10 Ian Rutt
 * Minor enhancements/bugfixes to EISMINT3GL driver
 * Minor doc change in glide_types.f90 (thanks, Oli)
	
2006-05-02 Ian Rutt
 * Added temperature half-range to glint output variables as glint_arng
 * Cleared up series of important confusions/bugs in mass-balance
 calculations in glint. Note that all mass-balance calculations in glint,
 including in the two PDD schemes are done in terms of water-equivalent
 depths. The mass balance is then converted to ice-equivalent depth at the
 point where the glide timestep subroutines are called.
	
2006-04-27 Ian Rutt
 * Final version of EISMINT3 Greenland scenario. Can choose to start from
 present-day ice sheet or from no ice.
 * Added new calving scheme (marine ice edge/threshold based) and tidied
 up calving code (removed strange unknown option which was left over from
 old model)
	
2006-04-25 Ian Rutt
 * Removed redundant GLIDE options (sliding_law and stress_calc)

2006-04-20 Magnus Hagdorn
 * configure.in: when looking for Sun compiler also grep for Forte

2006-04-20 Ian Rutt
 * Added driver for EISMINT3 Greenland scenario, based on Magi's EISMINT