@@ -1,4 +1,7 @@
 2006-06-18 Magnus Hagdorn
+ * src/fortran/test_integrate.F90: minor fix to make it compile with gfortran
+
+2006-06-18 Magnus Hagdorn
  * src/python/glide_launch.py: need to add \n for gfortran
 
 2006-06-18 Magnus Hagdorn
